--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span id="hours">0</span> Hours
           <span id="minutes">0</span> Minutes
           <span id="seconds">0</span> Seconds
-          <h3> Since we stat talking</h1>
+          <h3> Since we start talking</h3>
         </div>
       </div>
     </div>
